internal/shader/testdata/bad/bad_var2.go
package main

func Foo(foo vec4) vec4 {
	return vec4
}
